Corrected Compatibility Issue
Was using List.of which is from Java 9, though this project is meant to
be compatible with Java 8.